Making the Pass and Take Button labels respect i18n

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -568,6 +568,7 @@
     "OtherPlayers": "So far the following other players are willing to participate in the game: {{others}}.",
     "OtherPlayersAccepted": "The following other players have already accepted: {{others}}",
     "Or": "or",
+    "Pass": "Pass",
     "PendingSubmit": "Your move still needs to be submitted.",
     "PickAnyVariant": "Select any of",
     "PickOneVariant": "Select at most one of",
@@ -636,6 +637,7 @@
     "Status": "Status",
     "Submit": "Submit",
     "SubmitMove": "Submit your move: {{move}}",
+    "TakeButton": "Take Button",
     "tblHeaderAccepted": "Accepted",
     "tblHeaderChallenger": "Challenger",
     "tblHeaderClockIncrement": "Clock increment",
