--- a/public/locales/fr/apfront.json
+++ b/public/locales/fr/apfront.json
@@ -122,6 +122,7 @@
     "OpponentMove": "[FR] Opponent's move",
     "OtherPlayers": "[FR] So far the following other players are willing to participate in the game: {{others}}.",
     "OtherPlayersAccepted": "[FR] The following other players have already accepted: {{others}}",
+    "Pass": "[FR] Pass",
     "PickAnyVariant": "[FR] Select any of:",
     "PickOneVariant": "[FR] Select at most one of:",
     "PickVariant": "[FR] Select a variant",
@@ -174,6 +175,7 @@
     "Status": "[FR] Status",
     "Submit": "[FR] Submit",
     "SubmitMove": "[FR] Submit your move: {{move}}",
+    "TakeButton": "[FR] Take Button",
     "tblHeaderAccepted": "",
     "tblHeaderChallenger": "",
     "tblHeaderClockIncrement": "",
