--- a/public/locales/it/apfront.json
+++ b/public/locales/it/apfront.json
@@ -122,6 +122,7 @@
     "OpponentMove": "[IT] Opponent's move",
     "OtherPlayers": "[IT] So far the following other players are willing to participate in the game: {{others}}.",
     "OtherPlayersAccepted": "[IT] The following other players have already accepted: {{others}}",
+    "Pass": "[IT] Pass",
     "PickAnyVariant": "[IT] Select any of:",
     "PickOneVariant": "[IT] Select at most one of:",
     "PickVariant": "[IT] Select a variant",
@@ -174,6 +175,7 @@
     "Status": "[IT] Status",
     "Submit": "[IT] Submit",
     "SubmitMove": "[IT] Submit your move: {{move}}",
+    "TakeButton": "[IT] Take Button",
     "tblHeaderAccepted": "",
     "tblHeaderChallenger": "",
     "tblHeaderClockIncrement": "",
