--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -9,6 +9,9 @@
     "AnnotationLevel": "Where would you like this choice applied?",
     "AvailableGames": "Available Games",
     "BoardSettings": "Change game board settings",
+    "buttons": {
+        "takebutton": "Take button"
+    },
     "Cancel": "Cancel",
     "CanPie": "This player has the option to switch seats.",
     "categories": {
