Replace 'custom-pass' and movelist buttons with 'custom-buttons'

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -10,6 +10,7 @@
     "AvailableGames": "Available Games",
     "BoardSettings": "Change game board settings",
     "buttons": {
+        "pass": "Pass",
         "takebutton": "Take button"
     },
     "Cancel": "Cancel",
