Make zoom toggleable

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -756,5 +756,6 @@
     "Yes": "Yes",
     "YourChallenges": "Your challenges",
     "YourGames": "Your games",
-    "YourMove": "Your move"
+    "YourMove": "Your move",
+    "EnableZoom": "Enable zoom"
 }
