--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -523,6 +523,7 @@
     "HelpRated": "This game will be rated.",
     "HelpUnRated": "This game will not be rated.",
     "HideDetails": "Hide descriptions",
+    "HideSpoilers": "Hide scores until game is concluded",
     "HideTours": "Hide tutorials",
     "History": "History",
     "ImplementationNotes": "Implementation Notes",
