Another pie tweak

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -537,7 +537,7 @@
     "IncludeAcceptDrawOffer": "a draw has been offered. Do you accept?",
     "IncludeDrawOffer": "include draw offer with move",
     "Increment": "increment {{inc}} hours",
-    "InvokePie": "Swap player colours",
+    "InvokePie": "Swap player seats",
     "IssueChallenge": "Issue a new challenge",
     "Legal": "Legal",
     "Level": "Where would you like these colors applied?",
