Add related sites to navbar

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -611,6 +611,7 @@
     "RatedPlayersCount_other": "rated players",
     "RatingsList": "{{name}} Ratings",
     "Reject": "Reject",
+    "RelatedSites": "Related sites",
     "ResetExploration": "Back to current position",
     "Resign": "Resign",
     "Respond": "Respond",
