--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -594,6 +594,7 @@
     "PleaseConsent": "Your consent is needed!",
     "PlayersAccepted": "So far the following players are willing to participate in the game: {{others}}.",
     "Playground": "Playground",
+    "Ply": "Ply",
     "ProfileAnon": "Would you like to be anonymous?",
     "ProfileAnonHelp": "Being anonymous means nobody will know who they're playing against, and your completed games will not be attributed to you. As a result, they will not be rated. Even if you change this setting later, past games cannot be reattributed to you.",
     "ProfileConsent": "Do you consent to the Abstract Play's terms of service and the privacy policy?",
