Standing challenges ready for live testing

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -461,6 +461,7 @@
     "ChooseClockStart": "Clock start (hours)",
     "ChooseColors": "Choose color scheme",
     "ChooseGame": "Choose a game",
+    "ChooseLimit": "Maximum number of active games",
     "ChooseMove": "Choose move",
     "ChooseNoExplore": "Disable exploration?",
     "ChooseOpponent": "Choose an opponent",
@@ -569,6 +570,7 @@
     "Increment": "increment {{inc}} hours",
     "InvokePie": "Swap player seats",
     "IssueChallenge": "Issue a new challenge",
+    "IssueStanding": "Issue a new standing challenge",
     "Legal": "Legal",
     "Level": "Where would you like these colors applied?",
     "LevelAll": "For all games",
@@ -586,6 +588,7 @@
     "NameNotAvailable": "The name {{name}} is not available.",
     "NewChallenge": "New challenge",
     "NewProfile": "Create profile",
+    "NewRealStanding": "New standing challenge",
     "News": "News",
     "NewsPreamble": "The authoritative and most up-to-date source of Abstract Play news is on our Discord Server (https://discord.abstractplay.com). Please come join us!",
     "NextGame": "Next game",
@@ -595,7 +598,8 @@
     "NoGames": "No games currently need your attention.",
     "NoOpponentMove": "No games waiting on opponent's move.",
     "NoOtherPlayersAccepted": "No other players have accepted yet.",
-    "NoStandingChallenges": "No standing challenges",
+    "NoRealStanding": "No standing challenges issued",
+    "NoStandingChallenges": "No open challenges",
     "Note": "Notes",
     "Notes": "Notes: ",
     "NotesHelp": "Notes for this challenge (max 128 characters).",
@@ -671,11 +675,11 @@
     "SelectSeating": "Select seating, that is in what order players will start the game.",
     "SoftTime": "No hard time: a loss on time needs to be claimed by the opponent.",
     "StandardColors": "Standard",
-    "StandingChallengeDescription": "Standing challenge for a game of {{game}}",
-    "StandingChallenges": "Standing Challenges for {{name}}",
-    "StandingChallenges2": "Standing Challenges",
-    "StandingChallengesCount_one": "standing challenge",
-    "StandingChallengesCount_other": "standing challenges",
+    "StandingChallengeDescription": "Open challenge for a game of {{game}}",
+    "StandingChallenges": "Open Challenges for {{name}}",
+    "StandingChallenges2": "Open Challenges",
+    "StandingChallengesCount_one": "open challenge",
+    "StandingChallengesCount_other": "open challenges",
     "Statistics": "Statistics",
     "stats_module_avgRatings": "Average ratings",
     "stats_module_gameStats": "Game statistics",
