Updating button labels to explicitely set

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -13,6 +13,7 @@
         "pass": "Pass",
         "takebutton": "Take button",
         "acceptpie": "Play second",
+        "playsecond": "Play second",
         "draw": "Claim draw",
         "pigs": {
             "back": "Move backward",
