Clarify some strings

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -444,7 +444,7 @@
     "ChallengedOthers": "{{game}}, other players: {{others}}",
     "ChallengedTwoPlayers": "{{game}} against {{other}}",
     "ChallengeFrom": "{{game}} challenge from {{challenger}}",
-    "ChallengeResponse": "Response needed",
+    "ChallengeResponse": "Challenges awaiting your resonse",
     "ChallengeResponseComment": "Comment",
     "ChallengeResponseCommentHelp": "Comment to challenger on your response.",
     "ChallengeRevokeCommentHelp": "Comment on revoking your challenge.",
@@ -599,7 +599,7 @@
     "NewsPreamble": "The authoritative and most up-to-date source of Abstract Play news is on our Discord Server (https://discord.abstractplay.com). Please come join us!",
     "NextGame": "Next game",
     "No": "No",
-    "NoChallengeResponse": "No challenges needing a response",
+    "NoChallengeResponse": "No challenges needing your response",
     "NoExploreTrue": "The built-in exploration feature will be forcibly disabled for this game.",
     "NoGames": "No games currently need your attention.",
     "NoOpponentMove": "No games waiting on opponent's move.",
@@ -615,7 +615,7 @@
     "NotifyLabel-challenges": "Challenges (every instance)",
     "NotifyLabel-gameStart": "Game started (every instance)",
     "NotifyLabel-gameEnd": "Game ended (every instance)",
-    "NoWaitingResponse": "No challenges waiting on response",
+    "NoWaitingResponse": "No challenges waiting on opponent response",
     "NoYourMove": "No games waiting for your move.",
     "NumChallenge": "There will be {{num}} players in this game. {{players}}. Seating will be random.",
     "NumChallenge2": "There will be 2 players in this game.",
@@ -804,7 +804,7 @@
     "View": "View",
     "VisitGame": "Visit game",
     "Waiting": "Waiting on other players to submit their moves",
-    "WaitingResponse": "Waiting on response",
+    "WaitingResponse": "Challenges awaiting opponent's response",
     "WelcomePlayer": "Dashboard for",
     "Winning": "Mark this move as winning for this player",
     "WithVariants_zero": ".",
