Allow resetting new challenge dialog to default

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -663,6 +663,7 @@
     "RatingsList": "{{name}} Ratings",
     "Reject": "Reject",
     "RelatedSites": "Related sites",
+    "ResetDefault": "Reset to default",
     "ResetExploration": "Back to current position",
     "Resign": "Resign",
     "Respond": "Respond",
