Add variants to game landing pages

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -636,9 +636,12 @@
     "OtherPlayersAccepted": "The following other players have already accepted: {{others}}",
     "Or": "or",
     "PendingSubmit": "Your move still needs to be submitted.",
-    "PickAnyVariant": "Select any of",
-    "PickOneVariant": "Select at most one of",
-    "PickVariant": "Select variants",
+    "PickAnyVariant_normal": "Select any of",
+    "PickAnyVariant_disabled": "You can select any of",
+    "PickOneVariant_normal": "Select at most one of",
+    "PickOneVariant_disabled": "You can select at most one of",
+    "PickVariant_normal": "Select variants",
+    "PickVariant_disabled": "Available variants",
     "PlayerList": "Players",
     "Players": "Players",
     "PleaseConsent": "Your consent is needed!",
