Add exploration page. Update stats descriptions. Unreverse some histograms

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -541,6 +541,7 @@
     },
     "EventsNav": "Events",
     "ExplorationSetting": "Exploration setting",
+    "ExploreGames": "Explore Games",
     "ExploreNever": "Never explore",
     "ExploreAsk": "Always ask",
     "ExploreAlways": "Always explore",
