--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -609,6 +609,8 @@
     "News": "News",
     "NewsPreamble": "The authoritative and most up-to-date source of Abstract Play news is on our Discord Server (https://discord.abstractplay.com). Please come join us!",
     "NextGame": "Next game",
+    "NextGameLast": "Viewing last game",
+    "NextGameNone": "Back to dashboard",
     "No": "No",
     "NoChallengeResponse": "No challenges needing your response",
     "NoExploreTrue": "The built-in exploration feature will be forcibly disabled for this game.",
