Add Join Once button

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -778,12 +778,13 @@
         "Completion": "Completion",
         "CompletionRate": "{{ratio}} games ({{percent}}%)",
         "Current": "Ongoing tournaments",
-        "Description": "These are recurring tournaments for any game and variant combination. As long as there is enough interest, the next tournament starts automatically after the previous tournament ends. Once you join a tournament, you will be registered for the next one automatically.\n\nAfter being requested, a tournament is open for registration for 2 weeks. If after the 2 week registration period there aren't at least 4 players registered, the tournament will stay open until the minimum number of players join. Otherwise the tournament starts, and the next tournament for the same game/variant combination is opened for registration. The next tournament starts a week after the current tournament ends.\n\nTournaments consist of divisions, with each division being a round-robin having at most 10 players. All games are played simultaneously. The time controls are: 36 hour increment, 72 hours starting time and 120 hours max time (hard time). Players are divided into divisions purely by their rating at the time the tournament starts. The highest rated players play in division 1, the next highest in division 2 and so on. Players are divided into divisions in such a way that all divisions have approximately the same number of players. First tiebreak is Sonneborn-Berger, that is, sum of defeated opponent scores. Second tiebreak is rating at the time the tournament started.",
+        "Description": "These are recurring tournaments for any game and variant combination. As long as there is enough interest, the next tournament starts automatically after the previous tournament ends. If you've joined the recurring series, then you will be automatically registered for the next tournament. If you \"joined once\" (an asterisk next to your name in the list of participants), then you will be removed after the next tournament starts.\n\nAfter being requested, a tournament is open for registration for 2 weeks. If after the 2 week registration period there aren't at least 4 players registered, the tournament will stay open until the minimum number of players join. Otherwise the tournament starts, and the next tournament for the same game/variant combination is opened for registration. The next tournament starts a week after the current tournament ends.\n\nTournaments consist of divisions, with each division being a round-robin having at most 10 players. All games are played simultaneously. The time controls are: 36 hour increment, 72 hours starting time and 120 hours max time (hard time). Players are divided into divisions purely by their rating at the time the tournament starts. The highest rated players play in division 1, the next highest in division 2 and so on. Players are divided into divisions in such a way that all divisions have approximately the same number of players. First tiebreak is Sonneborn-Berger, that is, sum of defeated opponent scores. Second tiebreak is rating at the time the tournament started.",
         "Division": "Division {{num}}",
         "Duplicate": "There is already a tournament for this game and variant/s",
         "Ended": "Date ended",
         "History": "History",
-        "Join": "Join tournament",
+        "Join": "Join recurring",
+        "JoinOnce": "Join once",
         "Name": "{{metaGame}} Tournament",
         "ProposeNew": "Request a new tournament",
         "New2": "New tournaments",
@@ -811,7 +812,7 @@
         "Visit": "Visit tournament",
         "Winner": "Winner",
         "DivisionWinner": "Winner: {{winner}}",
-        "Withdraw": "Withdraw"
+        "Withdraw": "Withdraw from next"
     },
     "TriggerRefresh": "Trigger a refresh",
     "TwoPlayersChallengeDescription": "You challenged {{other}} to a game of [{{game}}](/games/{{meta}})",
