--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -515,6 +515,10 @@
     "ConfirmResignDesc": "Are you sure you want to resign?",
     "ConfirmTimeout": "Out of time",
     "ConfirmTimeoutDesc": "Your opponent is out of time. Are you sure you want to claim the win?",
+    "ConfirmPremove": "Set pre-move",
+    "ConfirmPremoveDesc": "This move will be automatically submitted when your opponent plays the previous move. Set this pre-move?",
+    "ConfirmPremoveChangeDesc": "Another move at this position (or its subtree) is already set as a pre-move. Change to this move instead?",
+    "ClearPremove": "Clear pre-move",
     "Current": "Current",
     "CurrentGamesCount_one": "current game",
     "CurrentGamesCount_other": "current games",
@@ -615,6 +619,7 @@
     "MakeMove": "Make a move",
     "ManageContexts": "Manage Colour Contexts",
     "ManagePalettes": "Manage Palettes",
+    "MarkPremove": "Mark as pre-move",
     "MaxTime": "max time {{max}} hours",
     "Moves": "Moves",
     "MyColor": "Use my preferred player colour regardless of turn order",
