Change unset premove icon color. Spelling.

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -506,6 +506,7 @@
     "CompletedGamesList": "Completed {{name}} Games",
     "CompletedGamesHelp": "To keep the dashboard manageable, games drop off this list 7 days after the \"last seen\" date. Click the Clear button to remove it immediately. New chat will cause older games to resurface, restarting the 7-day clock. Visit the Games page to access older completed games.",
     "CompleteMove": "Complete move",
+    "Confirm": "Confirm",
     "ConfirmDeleteSubtree": "Delete exploration subtree",
     "ConfirmDeleteSubtreeDesc": "This will delete the current (explored) move and it's subtree. Are you sure you want to delete the subtree?",
     "ConfirmMove": "Confirm move submission",
@@ -515,10 +516,10 @@
     "ConfirmResignDesc": "Are you sure you want to resign?",
     "ConfirmTimeout": "Out of time",
     "ConfirmTimeoutDesc": "Your opponent is out of time. Are you sure you want to claim the win?",
-    "ConfirmPremove": "Set pre-move",
-    "ConfirmPremoveDesc": "This move will be automatically submitted when your opponent plays the previous move. Set this pre-move?",
-    "ConfirmPremoveChangeDesc": "Another move at this position (or its subtree) is already set as a pre-move. Change to this move instead?",
-    "ClearPremove": "Clear pre-move",
+    "ConfirmPremove": "Set premove",
+    "ConfirmPremoveDesc": "This move will be automatically submitted when your opponent plays the previous move. Set this premove?",
+    "ConfirmPremoveChangeDesc": "Another move at this position (or its subtree) is already set as a premove. Change to this move instead?",
+    "ClearPremove": "Clear premove",
     "Current": "Current",
     "CurrentGamesCount_one": "current game",
     "CurrentGamesCount_other": "current games",
