Tweak arimaa button text

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -43,9 +43,9 @@
             "dr": "Dark, Right"
         },
         "arimaa": {
-            "gold99": "99of9 setup",
-            "silver99e7": "99of9 setup, elephant e7",
-            "silver99d7": "99of9 setup, elephant d7"
+            "gold99": "Quick setup",
+            "silver99e7": "Quick setup, elephant e7",
+            "silver99d7": "Quick setup, elephant d7"
         }
     },
     "Cancel": "Cancel",
