Add display options to metagame pages

--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -6,6 +6,7 @@
     "AcceptDraw": "Accept draw offer",
     "Accepted": "Accepted!",
     "All": "All",
+    "AlternativeDisplays": "Alternative display options",
     "and": "and",
     "Annotate": "Show last move indicators",
     "AnnotationLevel": "Where would you like this choice applied?",
