--- a/public/locales/en/apfront.json
+++ b/public/locales/en/apfront.json
@@ -692,8 +692,8 @@
     "PendingSubmit": "Your move still needs to be submitted.",
     "PickAnyVariant_normal": "Select any of",
     "PickAnyVariant_disabled": "You can select any of",
-    "PickOneVariant_normal": "Select at most one of",
-    "PickOneVariant_disabled": "You can select at most one of",
+    "PickOneVariant_normal": "Select one of",
+    "PickOneVariant_disabled": "You can select one of",
     "PickVariant_normal": "Select variants",
     "PickVariant_disabled": "Available variants",
     "PlayerList": "Players",
